lib/gravity/zebra/j2js/JavaCommon.rb
# Auto-generated from a Treetop grammar. Edits may be lost.


module JavaCommon
  include Treetop::Runtime

  def root
    @root ||= :letterOrDigit
  end

  def _nt_letterOrDigit
    start_index = index
    if node_cache[:letterOrDigit].has_key?(index)
      cached = node_cache[:letterOrDigit][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('\G[a-zA-Z]', true, index)
      r1 = true
      @index += 1
    else
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('\G[0-9]', true, index)
        r2 = true
        @index += 1
      else
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:letterOrDigit][start_index] = r0

    r0
  end

  def _nt_letter
    start_index = index
    if node_cache[:letter].has_key?(index)
      cached = node_cache[:letter][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if has_terminal?('\G[a-zA-Z_$]', true, index)
      r0 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      r0 = nil
    end

    node_cache[:letter][start_index] = r0

    r0
  end

  module BinomialOperation0
  end

  def _nt_binomialOperation
    start_index = index
    if node_cache[:binomialOperation].has_key?(index)
      cached = node_cache[:binomialOperation][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    r2 = _nt_arithmeticOperation
    if r2
      r1 = r2
    else
      r3 = _nt_logicalOperation
      if r3
        r1 = r3
      else
        r4 = _nt_bitOperation
        if r4
          r1 = r4
        else
          @index = i1
          r1 = nil
        end
      end
    end
    s0 << r1
    if r1
      if has_terminal?('', false, index)
        r5 = instantiate_node(SyntaxNode,input, index...(index + 0))
        @index += 0
      else
        terminal_parse_failure('')
        r5 = nil
      end
      s0 << r5
    end
    if s0.last
      r0 = instantiate_node(JavaExpressionOperator,input, i0...index, s0)
      r0.extend(BinomialOperation0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:binomialOperation][start_index] = r0

    r0
  end

  module LogicalOperation0
  end

  module LogicalOperation1
  end

  def _nt_logicalOperation
    start_index = index
    if node_cache[:logicalOperation].has_key?(index)
      cached = node_cache[:logicalOperation][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?("&&", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure("&&")
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?("||", false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure("||")
        r2 = nil
      end
      if r2
        r0 = r2
      else
        if has_terminal?("!=", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure("!=")
          r3 = nil
        end
        if r3
          r0 = r3
        else
          if has_terminal?("==", false, index)
            r4 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure("==")
            r4 = nil
          end
          if r4
            r0 = r4
          else
            if has_terminal?("<=", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 2))
              @index += 2
            else
              terminal_parse_failure("<=")
              r5 = nil
            end
            if r5
              r0 = r5
            else
              if has_terminal?(">=", false, index)
                r6 = instantiate_node(SyntaxNode,input, index...(index + 2))
                @index += 2
              else
                terminal_parse_failure(">=")
                r6 = nil
              end
              if r6
                r0 = r6
              else
                i7, s7 = index, []
                if has_terminal?("<", false, index)
                  r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure("<")
                  r8 = nil
                end
                s7 << r8
                if r8
                  i9 = index
                  if has_terminal?('\G[<=]', true, index)
                    r10 = true
                    @index += 1
                  else
                    r10 = nil
                  end
                  if r10
                    r9 = nil
                  else
                    @index = i9
                    r9 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s7 << r9
                end
                if s7.last
                  r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                  r7.extend(LogicalOperation0)
                else
                  @index = i7
                  r7 = nil
                end
                if r7
                  r0 = r7
                else
                  i11, s11 = index, []
                  if has_terminal?(">", false, index)
                    r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure(">")
                    r12 = nil
                  end
                  s11 << r12
                  if r12
                    i13 = index
                    if has_terminal?('\G[>=]', true, index)
                      r14 = true
                      @index += 1
                    else
                      r14 = nil
                    end
                    if r14
                      r13 = nil
                    else
                      @index = i13
                      r13 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s11 << r13
                  end
                  if s11.last
                    r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                    r11.extend(LogicalOperation1)
                  else
                    @index = i11
                    r11 = nil
                  end
                  if r11
                    r0 = r11
                  else
                    @index = i0
                    r0 = nil
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:logicalOperation][start_index] = r0

    r0
  end

  module BitOperation0
  end

  module BitOperation1
  end

  module BitOperation2
  end

  module BitOperation3
  end

  module BitOperation4
  end

  def _nt_bitOperation
    start_index = index
    if node_cache[:bitOperation].has_key?(index)
      cached = node_cache[:bitOperation][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?("&", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("&")
      r2 = nil
    end
    s1 << r2
    if r2
      i3 = index
      if has_terminal?('\G[&=]', true, index)
        r4 = true
        @index += 1
      else
        r4 = nil
      end
      if r4
        r3 = nil
      else
        @index = i3
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(BitOperation0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5, s5 = index, []
      if has_terminal?("|", false, index)
        r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("|")
        r6 = nil
      end
      s5 << r6
      if r6
        i7 = index
        if has_terminal?('\G[=|]', true, index)
          r8 = true
          @index += 1
        else
          r8 = nil
        end
        if r8
          r7 = nil
        else
          @index = i7
          r7 = instantiate_node(SyntaxNode,input, index...index)
        end
        s5 << r7
      end
      if s5.last
        r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        r5.extend(BitOperation1)
      else
        @index = i5
        r5 = nil
      end
      if r5
        r0 = r5
      else
        i9, s9 = index, []
        if has_terminal?(">>>", false, index)
          r10 = instantiate_node(SyntaxNode,input, index...(index + 3))
          @index += 3
        else
          terminal_parse_failure(">>>")
          r10 = nil
        end
        s9 << r10
        if r10
          i11 = index
          if has_terminal?("=", false, index)
            r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("=")
            r12 = nil
          end
          if r12
            r11 = nil
          else
            @index = i11
            r11 = instantiate_node(SyntaxNode,input, index...index)
          end
          s9 << r11
        end
        if s9.last
          r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
          r9.extend(BitOperation2)
        else
          @index = i9
          r9 = nil
        end
        if r9
          r0 = r9
        else
          i13, s13 = index, []
          if has_terminal?(">>", false, index)
            r14 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure(">>")
            r14 = nil
          end
          s13 << r14
          if r14
            i15 = index
            if has_terminal?('\G[>=]', true, index)
              r16 = true
              @index += 1
            else
              r16 = nil
            end
            if r16
              r15 = nil
            else
              @index = i15
              r15 = instantiate_node(SyntaxNode,input, index...index)
            end
            s13 << r15
          end
          if s13.last
            r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
            r13.extend(BitOperation3)
          else
            @index = i13
            r13 = nil
          end
          if r13
            r0 = r13
          else
            i17, s17 = index, []
            if has_terminal?("<<", false, index)
              r18 = instantiate_node(SyntaxNode,input, index...(index + 2))
              @index += 2
            else
              terminal_parse_failure("<<")
              r18 = nil
            end
            s17 << r18
            if r18
              i19 = index
              if has_terminal?("=", false, index)
                r20 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("=")
                r20 = nil
              end
              if r20
                r19 = nil
              else
                @index = i19
                r19 = instantiate_node(SyntaxNode,input, index...index)
              end
              s17 << r19
            end
            if s17.last
              r17 = instantiate_node(SyntaxNode,input, i17...index, s17)
              r17.extend(BitOperation4)
            else
              @index = i17
              r17 = nil
            end
            if r17
              r0 = r17
            else
              if has_terminal?("^", false, index)
                r21 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("^")
                r21 = nil
              end
              if r21
                r0 = r21
              else
                @index = i0
                r0 = nil
              end
            end
          end
        end
      end
    end

    node_cache[:bitOperation][start_index] = r0

    r0
  end

  module ArithmeticOperation0
  end

  module ArithmeticOperation1
  end

  module ArithmeticOperation2
  end

  module ArithmeticOperation3
  end

  module ArithmeticOperation4
  end

  def _nt_arithmeticOperation
    start_index = index
    if node_cache[:arithmeticOperation].has_key?(index)
      cached = node_cache[:arithmeticOperation][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?("*", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("*")
      r2 = nil
    end
    s1 << r2
    if r2
      i3 = index
      if has_terminal?("=", false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("=")
        r4 = nil
      end
      if r4
        r3 = nil
      else
        @index = i3
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(ArithmeticOperation0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5, s5 = index, []
      if has_terminal?("/", false, index)
        r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("/")
        r6 = nil
      end
      s5 << r6
      if r6
        i7 = index
        if has_terminal?("=", false, index)
          r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("=")
          r8 = nil
        end
        if r8
          r7 = nil
        else
          @index = i7
          r7 = instantiate_node(SyntaxNode,input, index...index)
        end
        s5 << r7
      end
      if s5.last
        r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        r5.extend(ArithmeticOperation1)
      else
        @index = i5
        r5 = nil
      end
      if r5
        r0 = r5
      else
        i9, s9 = index, []
        if has_terminal?("%", false, index)
          r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("%")
          r10 = nil
        end
        s9 << r10
        if r10
          i11 = index
          if has_terminal?("=", false, index)
            r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("=")
            r12 = nil
          end
          if r12
            r11 = nil
          else
            @index = i11
            r11 = instantiate_node(SyntaxNode,input, index...index)
          end
          s9 << r11
        end
        if s9.last
          r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
          r9.extend(ArithmeticOperation2)
        else
          @index = i9
          r9 = nil
        end
        if r9
          r0 = r9
        else
          i13, s13 = index, []
          if has_terminal?("+", false, index)
            r14 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("+")
            r14 = nil
          end
          s13 << r14
          if r14
            i15 = index
            if has_terminal?("=", false, index)
              r16 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("=")
              r16 = nil
            end
            if r16
              r15 = nil
            else
              @index = i15
              r15 = instantiate_node(SyntaxNode,input, index...index)
            end
            s13 << r15
          end
          if s13.last
            r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
            r13.extend(ArithmeticOperation3)
          else
            @index = i13
            r13 = nil
          end
          if r13
            r0 = r13
          else
            i17, s17 = index, []
            if has_terminal?("-", false, index)
              r18 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("-")
              r18 = nil
            end
            s17 << r18
            if r18
              i19 = index
              if has_terminal?('\G[=-]', true, index)
                r20 = true
                @index += 1
              else
                r20 = nil
              end
              if r20
                r19 = nil
              else
                @index = i19
                r19 = instantiate_node(SyntaxNode,input, index...index)
              end
              s17 << r19
            end
            if s17.last
              r17 = instantiate_node(SyntaxNode,input, i17...index, s17)
              r17.extend(ArithmeticOperation4)
            else
              @index = i17
              r17 = nil
            end
            if r17
              r0 = r17
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end
    end

    node_cache[:arithmeticOperation][start_index] = r0

    r0
  end

  module AssignmentOperation0
  end

  module AssignmentOperation1
  end

  def _nt_assignmentOperation
    start_index = index
    if node_cache[:assignmentOperation].has_key?(index)
      cached = node_cache[:assignmentOperation][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    i2, s2 = index, []
    if has_terminal?("=", false, index)
      r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("=")
      r3 = nil
    end
    s2 << r3
    if r3
      i4 = index
      if has_terminal?("=", false, index)
        r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("=")
        r5 = nil
      end
      if r5
        r4 = nil
      else
        @index = i4
        r4 = instantiate_node(SyntaxNode,input, index...index)
      end
      s2 << r4
    end
    if s2.last
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      r2.extend(AssignmentOperation0)
    else
      @index = i2
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?("+=", false, index)
        r6 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure("+=")
        r6 = nil
      end
      if r6
        r1 = r6
      else
        if has_terminal?("-=", false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure("-=")
          r7 = nil
        end
        if r7
          r1 = r7
        else
          if has_terminal?("*=", false, index)
            r8 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure("*=")
            r8 = nil
          end
          if r8
            r1 = r8
          else
            if has_terminal?("/=", false, index)
              r9 = instantiate_node(SyntaxNode,input, index...(index + 2))
              @index += 2
            else
              terminal_parse_failure("/=")
              r9 = nil
            end
            if r9
              r1 = r9
            else
              if has_terminal?("&=", false, index)
                r10 = instantiate_node(SyntaxNode,input, index...(index + 2))
                @index += 2
              else
                terminal_parse_failure("&=")
                r10 = nil
              end
              if r10
                r1 = r10
              else
                if has_terminal?("|=", false, index)
                  r11 = instantiate_node(SyntaxNode,input, index...(index + 2))
                  @index += 2
                else
                  terminal_parse_failure("|=")
                  r11 = nil
                end
                if r11
                  r1 = r11
                else
                  if has_terminal?("^=", false, index)
                    r12 = instantiate_node(SyntaxNode,input, index...(index + 2))
                    @index += 2
                  else
                    terminal_parse_failure("^=")
                    r12 = nil
                  end
                  if r12
                    r1 = r12
                  else
                    if has_terminal?("%=", false, index)
                      r13 = instantiate_node(SyntaxNode,input, index...(index + 2))
                      @index += 2
                    else
                      terminal_parse_failure("%=")
                      r13 = nil
                    end
                    if r13
                      r1 = r13
                    else
                      if has_terminal?("<<=", false, index)
                        r14 = instantiate_node(SyntaxNode,input, index...(index + 3))
                        @index += 3
                      else
                        terminal_parse_failure("<<=")
                        r14 = nil
                      end
                      if r14
                        r1 = r14
                      else
                        if has_terminal?(">>=", false, index)
                          r15 = instantiate_node(SyntaxNode,input, index...(index + 3))
                          @index += 3
                        else
                          terminal_parse_failure(">>=")
                          r15 = nil
                        end
                        if r15
                          r1 = r15
                        else
                          if has_terminal?(">>>=", false, index)
                            r16 = instantiate_node(SyntaxNode,input, index...(index + 4))
                            @index += 4
                          else
                            terminal_parse_failure(">>>=")
                            r16 = nil
                          end
                          if r16
                            r1 = r16
                          else
                            @index = i1
                            r1 = nil
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    s0 << r1
    if r1
      if has_terminal?('', false, index)
        r17 = instantiate_node(SyntaxNode,input, index...(index + 0))
        @index += 0
      else
        terminal_parse_failure('')
        r17 = nil
      end
      s0 << r17
    end
    if s0.last
      r0 = instantiate_node(JavaExpressionOperator,input, i0...index, s0)
      r0.extend(AssignmentOperation1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:assignmentOperation][start_index] = r0

    r0
  end

  module PrefixOp0
  end

  def _nt_prefixOp
    start_index = index
    if node_cache[:prefixOp].has_key?(index)
      cached = node_cache[:prefixOp][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?("++", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure("++")
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?("--", false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure("--")
        r3 = nil
      end
      if r3
        r1 = r3
      else
        if has_terminal?("!", false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("!")
          r4 = nil
        end
        if r4
          r1 = r4
        else
          if has_terminal?("~", false, index)
            r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("~")
            r5 = nil
          end
          if r5
            r1 = r5
          else
            if has_terminal?("+", false, index)
              r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("+")
              r6 = nil
            end
            if r6
              r1 = r6
            else
              if has_terminal?("-", false, index)
                r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("-")
                r7 = nil
              end
              if r7
                r1 = r7
              else
                @index = i1
                r1 = nil
              end
            end
          end
        end
      end
    end
    s0 << r1
    if r1
      if has_terminal?('', false, index)
        r8 = instantiate_node(SyntaxNode,input, index...(index + 0))
        @index += 0
      else
        terminal_parse_failure('')
        r8 = nil
      end
      s0 << r8
    end
    if s0.last
      r0 = instantiate_node(JavaExpressionOperator,input, i0...index, s0)
      r0.extend(PrefixOp0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:prefixOp][start_index] = r0

    r0
  end

  module PostFixOp0
  end

  def _nt_postFixOp
    start_index = index
    if node_cache[:postFixOp].has_key?(index)
      cached = node_cache[:postFixOp][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?("++", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure("++")
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?("--", false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure("--")
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      if has_terminal?('', false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 0))
        @index += 0
      else
        terminal_parse_failure('')
        r4 = nil
      end
      s0 << r4
    end
    if s0.last
      r0 = instantiate_node(JavaExpressionOperator,input, i0...index, s0)
      r0.extend(PostFixOp0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:postFixOp][start_index] = r0

    r0
  end

  module Keyword0
  end

  def _nt_keyword
    start_index = index
    if node_cache[:keyword].has_key?(index)
      cached = node_cache[:keyword][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?("assert", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure("assert")
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?("break", false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure("break")
        r3 = nil
      end
      if r3
        r1 = r3
      else
        if has_terminal?("case", false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 4))
          @index += 4
        else
          terminal_parse_failure("case")
          r4 = nil
        end
        if r4
          r1 = r4
        else
          if has_terminal?("catch", false, index)
            r5 = instantiate_node(SyntaxNode,input, index...(index + 5))
            @index += 5
          else
            terminal_parse_failure("catch")
            r5 = nil
          end
          if r5
            r1 = r5
          else
            if has_terminal?("class", false, index)
              r6 = instantiate_node(SyntaxNode,input, index...(index + 5))
              @index += 5
            else
              terminal_parse_failure("class")
              r6 = nil
            end
            if r6
              r1 = r6
            else
              if has_terminal?("continue", false, index)
                r7 = instantiate_node(SyntaxNode,input, index...(index + 8))
                @index += 8
              else
                terminal_parse_failure("continue")
                r7 = nil
              end
              if r7
                r1 = r7
              else
                if has_terminal?("default", false, index)
                  r8 = instantiate_node(SyntaxNode,input, index...(index + 7))
                  @index += 7
                else
                  terminal_parse_failure("default")
                  r8 = nil
                end
                if r8
                  r1 = r8
                else
                  if has_terminal?("do", false, index)
                    r9 = instantiate_node(SyntaxNode,input, index...(index + 2))
                    @index += 2
                  else
                    terminal_parse_failure("do")
                    r9 = nil
                  end
                  if r9
                    r1 = r9
                  else
                    if has_terminal?("else", false, index)
                      r10 = instantiate_node(SyntaxNode,input, index...(index + 4))
                      @index += 4
                    else
                      terminal_parse_failure("else")
                      r10 = nil
                    end
                    if r10
                      r1 = r10
                    else
                      if has_terminal?("enum", false, index)
                        r11 = instantiate_node(SyntaxNode,input, index...(index + 4))
                        @index += 4
                      else
                        terminal_parse_failure("enum")
                        r11 = nil
                      end
                      if r11
                        r1 = r11
                      else
                        if has_terminal?("extends", false, index)
                          r12 = instantiate_node(SyntaxNode,input, index...(index + 7))
                          @index += 7
                        else
                          terminal_parse_failure("extends")
                          r12 = nil
                        end
                        if r12
                          r1 = r12
                        else
                          if has_terminal?("finally", false, index)
                            r13 = instantiate_node(SyntaxNode,input, index...(index + 7))
                            @index += 7
                          else
                            terminal_parse_failure("finally")
                            r13 = nil
                          end
                          if r13
                            r1 = r13
                          else
                            if has_terminal?("final", false, index)
                              r14 = instantiate_node(SyntaxNode,input, index...(index + 5))
                              @index += 5
                            else
                              terminal_parse_failure("final")
                              r14 = nil
                            end
                            if r14
                              r1 = r14
                            else
                              if has_terminal?("for", false, index)
                                r15 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                @index += 3
                              else
                                terminal_parse_failure("for")
                                r15 = nil
                              end
                              if r15
                                r1 = r15
                              else
                                if has_terminal?("if", false, index)
                                  r16 = instantiate_node(SyntaxNode,input, index...(index + 2))
                                  @index += 2
                                else
                                  terminal_parse_failure("if")
                                  r16 = nil
                                end
                                if r16
                                  r1 = r16
                                else
                                  if has_terminal?("implements", false, index)
                                    r17 = instantiate_node(SyntaxNode,input, index...(index + 10))
                                    @index += 10
                                  else
                                    terminal_parse_failure("implements")
                                    r17 = nil
                                  end
                                  if r17
                                    r1 = r17
                                  else
                                    if has_terminal?("import", false, index)
                                      r18 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                      @index += 6
                                    else
                                      terminal_parse_failure("import")
                                      r18 = nil
                                    end
                                    if r18
                                      r1 = r18
                                    else
                                      if has_terminal?("interface", false, index)
                                        r19 = instantiate_node(SyntaxNode,input, index...(index + 9))
                                        @index += 9
                                      else
                                        terminal_parse_failure("interface")
                                        r19 = nil
                                      end
                                      if r19
                                        r1 = r19
                                      else
                                        if has_terminal?("instanceof", false, index)
                                          r20 = instantiate_node(SyntaxNode,input, index...(index + 10))
                                          @index += 10
                                        else
                                          terminal_parse_failure("instanceof")
                                          r20 = nil
                                        end
                                        if r20
                                          r1 = r20
                                        else
                                          if has_terminal?("new", false, index)
                                            r21 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                            @index += 3
                                          else
                                            terminal_parse_failure("new")
                                            r21 = nil
                                          end
                                          if r21
                                            r1 = r21
                                          else
                                            if has_terminal?("package", false, index)
                                              r22 = instantiate_node(SyntaxNode,input, index...(index + 7))
                                              @index += 7
                                            else
                                              terminal_parse_failure("package")
                                              r22 = nil
                                            end
                                            if r22
                                              r1 = r22
                                            else
                                              if has_terminal?("return", false, index)
                                                r23 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                                @index += 6
                                              else
                                                terminal_parse_failure("return")
                                                r23 = nil
                                              end
                                              if r23
                                                r1 = r23
                                              else
                                                if has_terminal?("static", false, index)
                                                  r24 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                                  @index += 6
